--- a/todo-app/package.json
+++ b/todo-app/package.json
@@ -29,6 +29,8 @@
     "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "csrf-csrf": "^4.0.2",
+    "helmet": "^8.1.0",
     "mongoose": "^8.15.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
