docs(Scalar): Configure Scalar Api refrence

--- a/nexus/package.json
+++ b/nexus/package.json
@@ -27,6 +27,8 @@
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/mongoose": "^11.0.3",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/swagger": "^11.2.0",
+    "@scalar/nestjs-api-reference": "^0.5.6",
     "@types/lodash": "^4.17.18",
     "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
