--- a/in-vozo/package.json
+++ b/in-vozo/package.json
@@ -31,8 +31,10 @@
     "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "moment": "^2.30.1",
     "mongoose": "^8.16.4",
     "nodemailer": "^7.0.5",
+    "pdfkit": "^0.17.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
   },
