--- a/link-up/package.json
+++ b/link-up/package.json
@@ -36,6 +36,7 @@
     "class-validator": "^0.14.2",
     "ioredis": "^5.8.2",
     "mysql2": "^3.15.2",
+    "nodemailer": "^7.0.10",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "typeorm": "^0.3.20"
