--- a/Huma/apps/main/package.json
+++ b/Huma/apps/main/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Gateway",
+  "name": "main",
   "version": "0.0.1",
   "description": "",
   "author": "",
@@ -21,15 +21,11 @@
   },
   "dependencies": {
     "@nestjs/common": "^11.0.1",
-    "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
     "@nestjs/microservices": "^11.1.9",
     "@nestjs/platform-express": "^11.0.1",
-    "@nestjs/swagger": "^11.2.3",
-    "class-transformer": "^0.5.1",
-    "class-validator": "^0.14.3",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.2"
+    "rxjs": "^7.8.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
