--- a/Huma/apps/main/package.json
+++ b/Huma/apps/main/package.json
@@ -26,6 +26,7 @@
     "@nestjs/microservices": "^11.1.9",
     "@nestjs/platform-express": "^11.0.1",
     "ioredis": "^5.8.2",
+    "lodash": "^4.17.21",
     "pg": "^8.16.3",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
