--- a/Huma/apps/Gateway/package.json
+++ b/Huma/apps/Gateway/package.json
@@ -28,6 +28,7 @@
     "@nestjs/swagger": "^11.2.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.3",
+    "cookie-parser": "^1.4.7",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.2"
   },
